logging/graylog/graylog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graylog
  namespace: logging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graylog
  template:
    metadata:
      labels:
        app: graylog
    spec:
      containers:
        - name: graylog
          image: graylog/graylog:5.1
          ports:
            - containerPort: 9000
            - containerPort: 12201
