logging/graylog/graylog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graylog
  namespace: logging
spec:
  type: ClusterIP
  selector:
    app: graylog
  ports:
    - name: web
      port: 9000
      targetPort: 9000
    - name: gelf
      port: 12201
      targetPort: 12201
      protocol: UDP
