logging/graylog/graylog-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graylog-ingress
  namespace: logging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: logging.graylog
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: graylog
                port:
                  number: 9000
